--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -110,19 +110,30 @@
 %Nachbesserungen der verbleibenden Autor*innen
 %TODO
 
-\subsection*{Version 0.7 vom \today}
+
+\subsection*{Version 0.8 vom \today}
+Cover ausgetauscht
+
+Titelgrafiken zwei Abenteuer
+
+Goblin-Illustration ins richtige Abenteuer versetzt
+
+Illustration von Alnus (Platzhalter)
+
+\subsection*{Versionsgeschichte}
+
+\subsubsection*{Version 0.7}
 Titelseiten-Design vorbereitet und zwei Grafiken Bernard eingefügt
 
 Vorwort eingefügt
 
 Nachbesserungen \enquote{Asche}
 
-Korrektorat Charakterbögen \enquote{Bergkönig}
+Korrektorat Charakterbögen \enquote{Bergkönig} und Illustration von Zillie Zeh
 
 Anhänge zum Ausdrucken ans Ende verschoben
 
 
-\subsection*{Versionsgeschichte}
 \subsubsection*{0.6}
 Inhaltsverzeichnis gekürzt
 
@@ -279,7 +290,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 	Ein Dungeon-Gruppenabenteuer
 	
 	\vfill
-%\zeichnung[\textwidth]{cover-asche.png}
+\zeichnung[0.8\textwidth]{cover-klamm.png}
 \vfill	
 	
 {\href{mailto:matthias.thanos@gmx.de}{Matthias Thanos}}
@@ -290,8 +301,8 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 		Elisabeth Schmitt}
 	
 	\credit{Danksagung}{an alle, die an einer der vier Testrunden teilgenommen haben!}
-	
-	\credit{Titelbild \& Karte}{Matthias Thanos}
+%	
+%	\credit{Titelbild \& Karte}{Matthias Thanos}
 
 \newpage
 \input{klamm_und_heimlich/klamm-und-heimlich.tex}
@@ -305,7 +316,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 \usekomafont{section}
     Ein Abenteuer für 3-6\\ angehende Heldinnen und Helden (2.000 EP)
 	\vfill
-	%\zeichnung[\textwidth]{cover-asche.png}
+	\zeichnung[0.65\textwidth]{cover-schwarze-hand.png}
 	\vfill
 	
 	Tilmann Kircher
