--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -45,8 +45,8 @@
 \newcommand{\vorlesen}[1]{\begin{whitebox}#1\end{whitebox}}
 
 % NOTE Font liegt jetzt mit im Repository. Funktionert bei mir unter Windows und Linux.
-\newfontfamily{\rog}{Rogolan.ttf}
-%\newfontfamily{\rog}{rogolan.otf}
+%\newfontfamily{\rog}{Rogolan.ttf}
+\newfontfamily{\rog}{rogolan.otf}
 
 \newcommand{\fkv}{Finsterkamm-Volk }
 \newcommand{\fkvs}{Finsterkamm-Volks }
