--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -164,7 +164,7 @@ gelingt, fällt ein, dass die eisernen Kreuzer ähnlich silbern blinken wie Silb
 
 Es ist auch möglich, \textbf{Sulrik} einzuschüchtern. Dabei muss eine Probe auf
 
-\probe{autorität}{Autorität: Einschüchtern (I)}{
+\probe{autoritaet}{Autorität: Einschüchtern (I)}{
 gegen den \textit{MU-PW} \textbf{Sulrik}s (8) abgelegt werden. Die Probe ist aber um -8 erschwert, da \textbf{Sulrik} sich der Überzahl der Goblins bewusst ist.
 }
 
