--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -81,7 +81,7 @@
 
 
 \title{Die Chroniken von Ilaris\\ Band II\\ Abenteuer und Spielhilfen aus der Community}
-
+\input{kreaturen.tex}
 \begin{document}
 \hauptteil
 \titelseite{%
