minor fixes added links

--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -283,7 +283,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 
 
 
-\kapitel{Klamm und heimlich}
+\kapitel{\href{https://ilaris-online.de/app/abenteuer/a97d90fd-4f35-4072-a08f-8cd70b604c4b}{Klamm und heimlich}}
 \thispagestyle{empty}
 
 \begin{center}
@@ -309,7 +309,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 \input{klamm_und_heimlich/klamm-und-heimlich.tex}
 
 
-\chapter*{Die schwarze\linebreak Hand im Wengen\-holmer Land}
+\chapter*{\href{}{Die schwarze\linebreak Hand im Wengen\-holmer Land}} % TODO
 \addcontentsline{toc}{chapter}{Die\,schwarze\,Hand\,\allowbreak im\,\allowbreak Wengen\-holmer\allowbreak\,Land}
 \thispagestyle{empty}
 
@@ -341,7 +341,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 
 
 
-\kapitel{Asche im Wind}
+\kapitel{\href{https://ilaris-online.de/app/abenteuer/eaf26b12-f242-42d9-aaba-c4f5c50a2374}{Asche im Wind}}
 
 \thispagestyle{empty}
 
@@ -360,7 +360,7 @@ Wir wünschen euch viel Spaß beim Spielen und freuen uns über Rückmeldungen u
 \input{asche_im_wind/asche-im-wind.tex}
 
 
-\chapter*{In den Hallen\linebreak des Bergkönigs}
+\chapter*{\href{https://ilaris-online.de/app/abenteuer/43ab1538-1193-4d9b-8056-648819bf51a7}{In den Hallen\linebreak des Bergkönigs}}
 \addcontentsline{toc}{chapter}{In den Hallen\allowbreak\ des Bergkönigs}
 
 \thispagestyle{empty}
