--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -113,9 +113,8 @@ Die Last wird eingehakt und dann mithilfe einer unten angebrachten Kurbel und ei
 Ab und an dringt für Sekundenbruchteile orangefarben flackerndes Licht von der Schmiede in die Mine.
 
 Immer dann, wenn jemand ein Wagnis unternimmt, kannst du eine Probe verlangen:
-\probe{heimlichkeit}{Untertauchen (12)}{Um am Minentrupp vorbei zum Kran zu schleichen.}
 \info{Die betreffende Person würfelt dazu drei zwanzigseitige Würfel (3W20), von denen nur das mittlere Ergebnis gewertet wird, und addiert ihren Probenwert (PW) von Heimlichkeit. Das Ergebnis muss den Zielwert von 12 erreichen, damit die Aktion glückt.}
-
+\mprobe{heimlichkeit}{Untertauchen (12)}{Heimlichkeit}{Um am Minentrupp vorbei zum Kran zu schleichen.}
 \abschnitt{Schmiede}
 \info{
 Wende dich nun an den ersten Helden, der hochkommt!
@@ -156,8 +155,8 @@ Eine seitliche Raumöffnung gibt den Blick frei zum Kran in der tiefer liegenden
 \vorlesen{Drei Schritt vor euch versperrt euch ein kreisrundes weißes Zelt die Sicht auf eine weiträumige Höhle. Spärliches Licht dringt zu euch herüber. In einer trockenen Einbuchtung neben euch liegen einige Felle und Lederreste aufgetürmt.
 }
 
-Das Zelt gehört dem \textbf{Ork-Schamanen} und beherbergt einen lose herumflatternden Brief (\emph{\ref{kuh_ho1}{Handout 1}}),
-eine an die Zeltwand gepinnte, dahingekritzelte Höhlenkarte (\emph{\ref{kuh_ho2}{Handout 2}}) und einen kleinen improvisierten \textbf{Tairach}-Schrein mit einem Stierschädel.
+Das Zelt gehört dem \textbf{Ork-Schamanen} und beherbergt einen lose herumflatternden Brief (\emph{\ref{kuh_ho1}{Handout 1}, s. S. \,\pageref{kuh_ho1}}),
+eine an die Zeltwand gepinnte, dahingekritzelte Höhlenkarte (\emph{\ref{kuh_ho2}{Handout 2}, s. S. \,\pageref{kuh_ho2}}) und einen kleinen improvisierten \textbf{Tairach}-Schrein mit einem Stierschädel. % TODO überprüfen, ob gefunden
 		
 Unter dem Schädel versteckt ist eine Schatulle mit kaputter Schließe und über 1.000 laut klimpernden Kupfer- und Eisenmünzen im Gesamtwert von rund 5~Dukaten.
 
@@ -208,7 +207,7 @@ Als ihr euch nähert, hört ihr einen schmerzverzerrten Schrei. Etwas Metallisch
 
 Was, immer noch nicht?? Na warte, bis ich mit dir fertig bin \dots“
 }
-Durch den Türspalt kann man drei bis fünf mit \textbf{Arbach}-Säbeln bewaffnete Ork-Krieger \emph{(Ilaris:104)} beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
+Durch den Türspalt kann man drei bis fünf mit Arbach-Säbeln bewaffnete Ork-Krieger \emph{(Ilaris:104)} beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
 
 \zeichnung[0.3\textwidth]{Goblin.png}
 
@@ -302,7 +301,7 @@ Daher verabschiedet sich Greifax am Ende des Abenteuers und kann später wieder 
 
 Offenbar muss irgendjemand den Orks den Tipp gegeben haben, dass der Knappe gerade zu dieser Zeit auf der Straße entführt werden kann.
 Die Dienerin \textbf{Treudane Degenhardt} (hässliche Warze am Kinn, sonst hübsch, spricht etwas zu schnell und abgehackt) steht im Verdacht, 
-ich für die Enteignung ihrer einst landadligen Eltern revanchieren zu wollen, welche sich im vorletzten gräflichen Kleinkrieg auf die falsche Seite geschlagen hatten.
+sich für die Enteignung ihrer einst landadligen Eltern revanchieren zu wollen, welche sich im vorletzten gräflichen Kleinkrieg auf die falsche Seite geschlagen hatten.
 
 Womöglich hat sie sich zwischenzeitlich dem \textbf{Geheimbund der Schnitter} angeschlossen, der \textbf{Tairach} verehrt, und plant, im Bündnis mit den Orks \textbf{Gut Nebelstein} einzunehmen.
 Denn der Bund hat erfahren, dass in der dortigen Krypta eines schwach orkblütigen Vorfahren der Ritterin ein Kriegsartefakt der Orks liegt.
@@ -336,7 +335,7 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 	\trennlinie
 	\kreaturattribute{KK 8, KO 16, KL 6, IN 8, FF 8, GE 8}
 	\trennlinie
-	\kreaturwaffe{Schmiedehammer}{1}{10}{9}{2W6}{Kopflastig, Rüstungsbrechend, Schwer (4), Stumpf}
+	\kreaturwaffe{\scriptsize Schmiedehammer}{1}{10}{9}{2W6}{Kopflastig, Rüstungsbrechend, Schwer (4), Stumpf}
 	\trennlinie
 	\kreaturinfo{Kleidung}{Schmiedeschürze (verleiht Resistenz I gegen Feuer).}
 }
@@ -353,7 +352,7 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 	\trennlinie
 	\kreaturinfo{Zauber}{Tairachs Krieger \textit{Ilaris:164}, 
 		Brazoraghs Hieb (\textit{Ilaris:164}) ist bereits in Knochenkeule eingerechnet, 
-		Geistertausch (\textit{Ilaris:165}})
+		Geistertausch (\textit{Ilaris:165})}
 	
 	\kreaturinfo{Geistertausch}{Der Schamane hat sich ein paar Schuppen von Greifax gesichert 
 		und könnte die Flucht behindern, 
