--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -5,14 +5,19 @@ Ilaris gibt es jetzt seit sechseinhalb Jahren, durch den ersten Abenteuerwettbew
 liegen auch die ersten Start-Abenteuer vor, um die Regeln kennenzulernen. Was mir 
 bislang fehlte, sind besonders einfache Abenteuer für Neulinge in Aventurien und Ilaris, 
 bei denen am Ende nicht gleich ein Oger auf die Charaktere wartet, und die aber doch das 
-„Hotzenplotzerische“ des ursprünglichen Aventurien bewahren (ich denke dabei so gerne an
+„Hotzenplotzerische“ des ursprünglichen Aventuriens bewahren (ich denke dabei so gerne an
 „Efferdors Fluch“ von F. Don-Schauen). Daher habe ich mich bei diesem Abenteuer um
 größtmögliche Simplizität bemüht. Der Titel ist eine Hommage an die schönen Abenteuer-Titel 
 der frühen DSA-Jahre („Wie Sand in Rastullahs Hand“), allerdings geht es nur am Rande um die 
 Räuberbande der „Schwarzen Hand“, denn von ihnen wird den Charakteren im Verlauf des Abenteuers 
 bloß noch ein kläglicher Rest begegnen.
-\geschichte{}{\textit{Tilmann Kircher}, im Februar 2024}
-
+\begin{flushright}
+--- \textit{Tilmann Kircher}, im Februar 2024
+\end{flushright}
+\vfill
+\begin{center}
+\includegraphics[width=0.4\linewidth]{offene_lizenz/hand}
+\end{center}
 \abschnitt{Einleitung}
 
 Zeitlich ist das Abenteuer zu Beginn eines beliebigen \textbf{Travia}-Mondes nach dem \textbf{Jahr des Feuers} (1027 BF)
@@ -29,14 +34,13 @@ Für besonders kampfstarke Gruppen können natürlich an mehreren Stellen typisc
 \kasten{
 Da es sich bei den Goblins und den Räubern um eine recht große Anzahl an Gegnern handelt, empfiehlt es sich, im Nahkampf nur die Spielenden aktiv würfeln zu lassen (\emph{Ilaris:9}).
 \platz
-Sollten die SC den Kampf mit den Goblins gesucht und dieser viel Zeit in Anspruch gekostet haben, macht es Sinn, anstelle der Räuber nurmehr ein verlassenes Lager mit Hinweis auf die \textbf{„Schwarze Hand“} einzuführen.
+Sollten die Spielercharaktere den Kampf mit den Goblins gesucht und dieser viel Zeit in Anspruch gekostet haben, macht es Sinn, anstelle der Räuber nurmehr ein verlassenes Lager mit Hinweis auf die \textbf{„Schwarze Hand“} einzuführen.
 }
-
 \neuespalte
 
 \abschnitt{Hintergrund}
 Im Peraine des Jahre 1027 BF befreite die Borbaradianerin \textbf{Charissia von Salmingen} den elementaren Flammenadler \textbf{Alagrimm} aus seinem Gefängnis im Zwergenreich \textbf{Koschim} und verheerte große Teile des nördlichen \textbf{Kosch}s.
-Dabei verlor einer ihrer Mitstreiter, der junge Magier \textbf{Amazelo von Künßberg} in der Nähe des kleinen Dorfes \textbf{Boggerode} eine Feldflasche mit einem potenten Heiltrank (3xHQ, bis 1057 BF haltbar) sowie einer kleinen Phiole mit gemahlenem Alicorn.
+Dabei verlor einer ihrer Mitstreiter, der junge Magier \textbf{Amazelo von Künßberg}, in der Nähe des kleinen Dorfes \textbf{Boggerode} eine Feldflasche mit einem potenten Heiltrank (3xHQ, bis 1057 BF haltbar) sowie eine kleine Phiole mit gemahlenem Alicorn.
 \textbf{Amazelo} selbst fuhr bei dem Angriff auf Angbar in die Niederhöllen ein, Heiltrank und Alicorn-Staub wurden vor kurzem von den Dörflern im Wald gefunden.
 
 Einen Tag vor Beginn der Handlung des Abenteuers war \textbf{Vittel}, der Gehilfe des \textbf{Peraine}-Geweihten, in das einige Wegstunden entfernt gelegene \textbf{Wengenholm} aufgebrochen, um die Fundstücke zu verkaufen.
@@ -44,7 +48,7 @@ Die gräfliche Schreiberin \textbf{Janne Pflögler} erkannte nicht nur den mutma
 Sie bot ihm an, in ihrem im Wald gelegenen Haus alchimistische Untersuchungen durchzuführen, um den genauen Inhalt zu erfahren.
 Tatsächlich gehört sie als Schlangenhexe der \textbf{Schwesternschaft des Wissens} an und verfügt nicht nur über eine grundlegende alchimistische Ausbildung, sondern besitzt auch eine an sie gebundene Schale, mit der sie den Trank zu analysieren gedachte.
 
-In der Hexenhütte angekommen bewirtete sie den jungen Burschen zunächst, im Anschluss genossen die beiden eine Rahja-gefällige Nacht, nach der sie spät und 
+In der Hexenhütte angekommen bewirtete sie den jungen Burschen zunächst, im Anschluss genossen die beiden eine rahjagefällige Nacht, nach der sie spät und 
 ausgiebig frühstückten.
 \textbf{Janne} konnte danach bis zur Mittagsstunde erfolgreich den Heiltrank analysieren.
 Am frühen Nachmittag öffnete sie die Phiole und gab ein paar Körner des Staubs in ihre Schale. Was sie nicht wissen konnte:
@@ -85,7 +89,7 @@ Die Frau Junkerin ist im Jahr des Feuers beim Angriff des Alagrimm samt einzigem
 
 
 Die Dörfler bleiben zunächst unter sich, diskutieren mit Fortschreiten des Abends aber immer lebhafter.
-Nach einiger Zeit können die Charaktere mitbekommen, dass \textbf{Vittel}, der Gehilfe von Vater \textbf{Peraintreu} seit dem Vortag vermisst wird.
+Nach einiger Zeit können die Charaktere mitbekommen, dass \textbf{Vittel}, der Gehilfe von Vater \textbf{Peraintreu}, seit dem Vortag vermisst wird.
 Auch vom Schlachtfest reden die Dörfler, welches am nächsten Tag gefeiert werden soll.
 
 \begin{itemize}
@@ -97,12 +101,12 @@ Auch vom Schlachtfest reden die Dörfler, welches am nächsten Tag gefeiert werd
 \end{itemize}
 
 Sofern die Charaktere versuchen, Interesse für den vermissten \textbf{Vittel} zu zeigen, reagieren die Dörfler zunächst einmal zurückhaltend.
-Bei einer gelungenen Gruppenprobe (oder einer individuellen Probe, sofern nur ein Charakter die Dörfler anspricht) auf 
-\probe{gebraeuche}{Gebräuche, Mittelreich (12)}{beginnen sie aufzutauen und Jette Buschanger klärt die Charaktere über den Grund der Diskussion auf:}
 
-\textbf{Vittel} war am Vortag Richtung Wengenholm aufgebrochen, um im Dorf eine mit seltsamen Zeichen („so, wie die gelehrten Herren das so machen“) verzierte Feldflasche sowie eine kleine kristallene Phiole mit einem weißlichen Pulver zu verkaufen zu versuchen, um noch etwas Salz und ein paar kräftige Kräuter für das Schlachtfest zu erstehen.
-Feldflasche und Phiole hatten die Dörfler vor ein paar Wochen im Wald gefunden.
-Jetzt ist \textbf{Vittel} ein guter Junge, hat ein gutes Händchen mit Pflanzen und verliert sich sicherlich nicht im Wald.
+\mprobe{gebraeuche}{Mittelreich (12)}{Gebräuche}{Gelingt die Gruppenprobe (wenn die Helden gemeinsam die Dörfler ansprechen), beginnen die Dörfler aufzutauen. Jette Buschanger klärt die Charaktere über den Grund der Diskussion auf.}
+
+\textbf{Vittel} war am Vortag Richtung Wengenholm aufgebrochen, um im Dorf eine mit seltsamen Zeichen („so, wie die gelehrten Herren das so machen“) verzierte Feldflasche sowie eine kleine kristallene Phiole mit einem weißlichen Pulver zu verkaufen und noch etwas Salz und ein paar kräftige Kräuter für das Schlachtfest zu erstehen.
+Die Feldflasche und die Phiole hatten die Dörfler vor ein paar Wochen im Wald gefunden.
+\textbf{Vittel} ist ein guter Junge, hat ein gutes Händchen mit Pflanzen und verliert sich sicherlich nicht im Wald.
 Zeitgefühl oder gar ein gewissenhafter Umgang mit dem rechtzeitigen Erledigen von Aufgaben kann ihm jedoch nicht nachgesagt werden. 
 Auch seine Liebe zum Hopfenbräu übersteigt noch einmal die eines durchschnittlichen Koschers.
 In \textbf{Boggerode} fürchten sie daher, dass \textbf{Vittel} gerade das beim Verkauf gewonnene Geld in einer Taverne in helles Angenburger verflüssigt.
@@ -148,24 +152,20 @@ Sobald die Charaktere sich der Brücke nähern, plustert sich der Anführer auf 
 
 Die Goblins sind wachsam und rechnen durchaus mit einem Angriff durch die Charaktere.
 
-\kreaturgoblin
-\textbf{Sulrik:} WS +1/+2, Initiative +2, AT/VT +2, TP +1
+\kreatur{Goblin}{rotpelzige Landplage des Nordens}{gfx/kreaturen/humanoid}{\kreaturkampfwerte{4}{4}{5}{3}\trennlinie \kreaturvorteile{Angepasst I (Dunkelheit), Resistenz gegen Kälte}\trennlinie \kreaturwaffe{Holzspeer}{2}{8}{8}{2W6{-}1}{Wendig}\kreaturwaffe{Keule}{1}{8}{8}{2W6+0}{Kopflastig, Stumpf}\kreaturwaffe{Kurzbogen}{16}{}{}{2W6+1}{}\trennlinie \kreaturattribute{CH 4, FF 10, GE 8, IN 6, KK 4, KL 4, KO 4, MU 4}\kreaturfertigkeiten{Laufen 6, Pirschen 8, Wachsamkeit 6, Zähigkeit 4} \trennlinie \kreaturinfo{Varianten}{Sulrik: WS +1/+2, Initiative +2, AT/VT +2, TP +1}}
 
 
 
 Regeltechnisch haben die Bogenschützen die \emph{Aktion Verzögern} gewählt und würden selbst bei niedrigerer Initiative als die Charaktere sofort (natürlich mit einem Malus von -4, \textit{Ilaris:37}) schießen, während die Speerkämpfer sich in \textit{voller Verteidigung} befinden und hinter den Baumstämmen eine \emph{vorteilhafte Position} einnehmen.
 
-
-Jedem der Charaktere, dem eine Probe auf 
+Die Charaktere können \textbf{Sulrik} mit Klugheit austricksen oder einschüchtern:
 
 \probe{klugheit}{Klugheit (I, 16)}{
-gelingt, fällt ein, dass die eisernen Kreuzer ähnlich silbern blinken wie Silbertaler. Und tatsächlich ist \textbf{Sulrik} unerfahren genug, für zwei Kreuzer pro Charakter die Brücke freizugeben.
+Der Charakter weiß: Eiserne Kreuzer blinken ähnlich silbern wie Silbertaler. Sulrik ist unerfahren genug, für zwei Kreuzer pro Charakter die Brücke freizugeben.
 }
 
-Es ist auch möglich, \textbf{Sulrik} einzuschüchtern. Dabei muss eine Probe auf
-
-\probe{autoritaet}{Autorität: Einschüchtern (I)}{
-gegen den \textit{MU-PW} \textbf{Sulrik}s (8) abgelegt werden. Die Probe ist aber um -8 erschwert, da \textbf{Sulrik} sich der Überzahl der Goblins bewusst ist.
+\mprobe{autoritaet}{Einschüchtern (I, 16+X)}{Autorität}{
+Wird gegen Sulriks MU (PW 8) abgelegt. Die Probe ist um -8 erschwert, da Sulrik sich der Überzahl der Goblins bewusst ist.
 }
 
 Übrigens führt die Wenge im Augenblick so viel Wasser, dass ein Überqueren abseits der Brücke ein schier auswegloses Unterfangen darstellen dürfte. 
@@ -173,16 +173,17 @@ gegen den \textit{MU-PW} \textbf{Sulrik}s (8) abgelegt werden. Die Probe ist abe
 Da die Charaktere die Goblins frühzeitig aus dem Wald heraus sehen, können sie natürlich auch einen Überraschungsangriff auf diese versuchen.
 
 \probenkasten[
-    bild=attribute,
+    bild=heimlichkeit,
     gruppenprobe=schlecht,
     farbe=braun,
-    pw=Y+X,
+    pw=8+X,
     zusammenarbeit=nein,
+    vergleichend=ja,
     anzahl=1,
 ]{Pirschen}{
 In diesem Fall muss ihnen eine vergleichende Gruppenprobe (I)
 gegen die \textit{Wachsamkeit} der Goblins gelingen, um nicht vorzeitig entdeckt zu werden.
-Gruppenprobe (I) bedeutet, der Charakter mit dem schlechtesten Wert in \textit{Heimlichkeit: Pirschen} würfelt mit einem W20 gegen den Goblin mit dem höchsten Wert in \textit{Wahrnehmung: Wachsamkeit}, in diesem Fall 8.
+Gruppenprobe (I) bedeutet, der Charakter mit dem schlechtesten Wert in \textit{Heimlichkeit, Pirschen} würfelt mit einem W20 gegen den Goblin mit dem höchsten Wert in \textit{Wahrnehmung, Wachsamkeit}, in diesem Fall 8.
 }
 
 
@@ -213,11 +214,11 @@ Nach drei Stunden erreichen die Charaktere dann \textbf{Wengenholm}, welches ein
 Regeltechnisch handelt es sich um eine Ermittlung.
 (Alternativ kann natürlich auch ausgespielt werden, wie die Charaktere sich durch das Dorf fragen, bis sie erfahren, wohin \textbf{Vittel} zuerst gegangen ist.)
 
-\probe{gebraeuche}{Gebräuche (12)}{
-    Alternativ: \textit{Menschenkenntnis}/\textit{Überreden}.\\
+\mprobe{gebraeuche}{Mittelreich (12)}{Gebräuche}{
+    Alternativ: \textit{Menschenkenntnis, Überreden}.\\
     Dauer: eine halbe Stunde\\
     Bei Misslingen kann die Probe beliebig oft wiederholt werden.
-    Die Charaktere verlieren allerdings jeweils Zeit, für weiteres Umhören im Ort.
+    Die Charaktere verlieren dadurch allerdings Zeit.
     
 }
 
@@ -227,7 +228,7 @@ Dort lässt sich in der Regel vom Markttag bis zum Rohalstag die Schreiberin \te
 Die gräfliche Schreibstube befindet sich im Erdgeschoss der gräflichen Residenz am Marktplatz.
 Trotz des Namens ist das Gebäude nur ein wenig größer ist die umliegenden Häuser.
 Graf \textbf{Jallik} nutzt es, wenn er sich in Wengenholm aufhält, da die Angenburg noch immer keine angemessenen Unterkünfte bereithält.
-Im Augenblick können die Charaktere aber nur den im \textbf{Jahr des Feuers} versehrten Verwalter \textbf{Alrik Altschuh} (früh ergraut, Brandnarben im Gesicht, das linke Bein endet unter dem Knie in eine hölzerne Prothese) antreffen, der bereitwillig Auskunft gibt:
+Im Augenblick können die Charaktere aber nur den im \textbf{Jahr des Feuers} versehrten Verwalter \textbf{Alrik Altschuh} (früh ergraut, Brandnarben im Gesicht, das linke Bein endet unter dem Knie in einer hölzernen Prothese) antreffen, der bereitwillig Auskunft gibt:
 
 \vorlesen{„Ja, gestern um die Mittagsstund' tauchte hier ein junger Bursch auf und bot einen zauberischen Trank an.
 	Zumindest hielt er sein Mitbringsel dafür.
@@ -248,42 +249,37 @@ Graf \textbf{Jallik} war es vor ein paar Tagen tatsächlich gelungen, die Räube
 Nur etwa eine Handvoll hatte sich retten können und war blindlings gen Norden geflohen, nicht wissend, wie nahe sie sich dem Grafensitz schon befinden.
 Sie haben vor kurzem etwa 40 Schritt abseits des Weges einen nicht ganz so dichten Fleck Waldes gefunden und begonnen, ein improvisiertes Lager aufzuschlagen.
 
-%\probenkasten[
-%    bild=wahrnehmung,
-%    gruppenprobe=gut,
-%    farbe=gruen,
-%    pw=Y+X,
-%   anzahl=1,
-%]{Wachsamkeit}{
-%Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe (I) 
-%gegen \textit{Heimlichkeit:Pirschen} der Räuber (4) (die Räuber sind nicht aufmerksam) gelingt. 
-%}
-
-\probe{wahrnehmung}{Wahrnehmung: Wachsamkeit (I, 4+X)}{Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe 
-	gegen \textit{Heimlichkeit: Pirschen} der Räuber (die Räuber sind nicht aufmerksam) gelingt. }
+\mprobe{wahrnehmung}{Wachsamkeit (I, 4+X)}{Wahrnehmung}{Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe 
+	gegen \textit{Heimlichkeit: Pirschen} der Räuber (die Räuber sind unaufmerksam) gelingt. }
 
 \neuespalte
 
 Haben die Charaktere die Geräusche der Bande gehört, können sie versuchen, sich an das Lager anzuschleichen. 
 
-\probe{heimlichkeit}{Heimlichkeit: Pirschen\\ (I, 6+X)}
+\mprobe{heimlichkeit}{Pirschen (I, 6+X)}{Heimlichkeit}
 {
 Dafür müssen sie eine vergleichende Gruppenprobe %(I)
 gegen die Wachsamkeit  der Räuber %(6)
 ablegen.
 }
 
-\zeichnung[0.5\textwidth]{eddard.png}
-
-Gelingt die Probe, so können sie die Räuber auf einer kleinen, etwa zehn Schritt durchmessenden Lichtung überraschen, die durch den Sturz einer Buche entstanden ist. Sie bauen gerade mit Decken und Fellen einen behelfsmäßigen Unterschlupf über ein paar feste Äste. Die am Boden liegende \textbf{Grimma} kann anhand einer alten Narbe sofort identifiziert werden, sollten die Charaktere die Aushänge in Wengenholm gelesen haben.
+Gelingt die Probe, so können sie die Räuber auf einer kleinen, etwa zehn Schritt durchmessenden Lichtung überraschen, die durch den Sturz einer Buche entstanden ist. Sie bauen gerade mit Decken und Fellen einen behelfsmäßigen Unterschlupf mittels ein paar festen Ästen. Die am Boden liegende \textbf{Grimma} kann anhand einer alten Narbe sofort identifiziert werden, sollten die Charaktere die Aushänge in Wengenholm gelesen haben.
 
 Es befinden sich hier so viele Räuber wie Charaktere +1, allerdings sind \textbf{Grimma} und der dicke \textbf{Enno} durch Wunden eingeschränkt (jeweils 3 Wunden).
+
+\begin{center}
+\includegraphics[width=0.9\linewidth]{offene_lizenz/riverdee.png}
+\end{center}
 
 \info{
 Es empfiehlt sich, im Falle einer sehr kampfschwachen Gruppe die Anzahl der Räuber zu reduzieren oder die Anzahl ihrer schon erlittenen Wunden heraufzusetzen.
 }
 
 Sollten die Räuber die Charaktere haben hören können, so haben sie ihre Waffen in der Hand (Holzspeer oder Knüppel), \textbf{Grimma} zielt kniend mit ihrem Kurzbogen auf sie.
+
+\vfill
+
+\zeichnung[0.5\textwidth]{eddard.png}
 
 \kreaturraeuber
 
@@ -296,16 +292,16 @@ Sollten die Charaktere unterliegen, werden die Räuber ihnen alles abnehmen, was
 In diesem Fall sieht der Autor nur eine Lösung des Dilemmas: \textbf{Janne} und \textbf{Vittel} haben mittlerweile das Ansinnen des Einhorns verstehen und die Phiole vernichten können. Jetzt befinden sie sich auf dem Rückweg nach Wengenholm und können den Charakteren zu Hilfe eilen. Eine zusätzliche Belohnung haben diese sich zwar nicht verdienen können, 15 EP für ihre Mühen sind allerdings möglich.
 }
 
-Sollten die Charaktere die Räuber schon auf dem Weg nicht gehört haben, so konnten die Räuber sie bemerken, sofern sie beim Betreten des Waldes sich nicht bewusst für's Schleichen entschieden hatten. Die Bande wird dann vorauseilen und den Charakteren auflauern. Dabei kniet sich \textbf{Grimma} hinter einen Baumstamm und schießt mit ihrem Bogen aus etwa zehn Schritt Entfernung auf den am stärksten aussehenden Gegner, während die anderen aus etwa acht Schritt Entfernung auf die Charaktere zustürmen. 
+Sollten die Charaktere die Räuber nicht schon auf dem Weg gehört haben, so konnten die Räuber sie bemerken, sofern sie beim Betreten des Waldes sich nicht bewusst für's Schleichen entschieden hatten. Die Bande wird dann vorauseilen und den Charakteren auflauern. Dabei kniet sich \textbf{Grimma} hinter einen Baumstamm und schießt mit ihrem Bogen aus etwa zehn Schritt Entfernung auf den am stärksten aussehenden Helden, während die anderen aus etwa acht Schritt Entfernung auf die Charaktere zustürmen. 
 
 
-\probe{wahrnehmung}{Wahrnehmung: Wachsamkeit (I, 8+X)}{
+\mprobe{wahrnehmung}{Wachsamkeit (I, 8+X)}{Wahrnehmung}{
 Die Charaktere gelten als \textit{überrascht}, sofern ihnen vorher keine vergleichende Probe gegen -- aufgrund der gut gewählten Deckung höherem -- Pirschen
 der Räuber gelingt.
 }
 
 \info{
-Zur \textit{Kampfunfähigkeit} oder Aufgabe der Räuber oder Charaktere gilt das weiter oben gesagte.
+Die Räuber sind bei fünf Einschränkungen \textit{kampfunfähig} und geben auf, sobald einer von ihnen \textit{kampfunfähig} wird.\\Unterliegen die Helden, nehmen die Räuber ihnen alles ab und lassen sie gefesselt zurück.
 }
 
 
@@ -314,16 +310,16 @@ Zur \textit{Kampfunfähigkeit} oder Aufgabe der Räuber oder Charaktere gilt das
 Sind die Charaktere aus dem Kampf siegreich ausgegangen und haben die gefangen genommenen Räuber gut verschnürt, so gelangen sie ohne weiteres nach etwa einer weiteren Stunde auf eine kleine Lichtung an einem südlich ausgerichteten, schwach absteigenden Hang. Ein kleines Fachwerkhaus auf steinernen, kniehohen Fundamenten blickt über einen größeren Garten. Die Eingangstür an der östlichen Stirnfront des Hauses allerdings steht sperrangelweit offen.
 
 
-Die Charaktere können das Haus betreten oder zunächst die Umgebung erkunden, in beiden Fällen können sie herausfinden, dass die Hintertür vom Garten aus mit Gewalt eingerannt wurde. Eine Probe auf 
+Die Charaktere können das Haus betreten oder zunächst die Umgebung erkunden, in beiden Fällen können sie herausfinden, dass die Hintertür vom Garten aus mit Gewalt eingerannt wurde.
 
-\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
-ergibt, dass ein Pferd die Hintertür eingerannt haben muss und in das Haus gestürmt ist. 
+\mprobe{wahrnehmung}{Sinnenschärfe (12)}{Wahrnehmung}{
+Ein Pferd muss die Hintertür eingerannt haben und in das Haus gestürmt sein. 
 }
 
 
-Die angrenzende Küche ist teilweise verwüstet, und zwar lediglich im direkt an die Hintertür angrenzenden Bereich. Außerdem wurde ein Tisch mit allerlei Kräutern und Gewürzen umgeworfen, der neben der Tür zum Flur gestanden hatte und jetzt vor der Tür liegt. Er lässt sich ohne weiteres von beiden Seiten übersteigen. Eine Probe auf 
-\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
-ergibt, dass zwei Personen von der Küche aus in das Haus geflohen sein müssen. 
+Die Küche nebenan ist teilweise verwüstet, und zwar lediglich im direkt an die Hintertür angrenzenden Bereich. Außerdem wurde ein Tisch mit allerlei Kräutern und Gewürzen umgeworfen, der neben der Tür zum Flur gestanden hatte und jetzt vor der Tür liegt. Er lässt sich ohne weiteres von beiden Seiten übersteigen.
+\mprobe{wahrnehmung}{Sinnenschärfe (12)}{Wahrnehmung}{
+Zwei Personen sind von der Küche aus in das Haus geflohen. 
 }
 
 
@@ -332,10 +328,10 @@ Ist der Erfolgswert der Probe 16 oder höher, so lässt sich sogar feststellen, 
 
 Die weiteren Räume des Hauses sind eine Stube sowie ein Schlafzimmer. Alles ist einfach, aber bequem ausgestattet. In der Stube befindet sich neben ein paar Sitzgelegenhei-ten um einen niedrigen Tisch eine verschlossene Bücherkiste. Das lässt sich mit einem flüchtigen Blick in die Zimmer feststellen. Die Bücherkiste enthält neben einigen humorvoll geschriebenen Kaiser-Valpo-Geschichten ein Kompendium über die Heil- und Nutzpflanzen des nördlichen Koschs sowie verschiedene Abhandlungen zur Anwendung von \textbf{Magica Contraria} (Antimagie) der \textbf{Akademie der Magischen Rüstung zu Gareth}.
 
-Sollten die Charaktere die Umgebung vor dem Eingangsbereich des Hauses untersuchen, so ergibt eine Probe auf 
+Sollten die Charaktere die Umgebung vor dem Eingangsbereich des Hauses untersuchen, können sie eine weitere Probe ablegen:
 
-\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
-dass zwei Personen auf diesem Weg das Haus verlassen haben müssen. 
+\mprobe{wahrnehmung}{Sinnenschärfe (12)}{Wahrnehmung}{
+Zwei Personen müssen auf diesem Weg das Haus verlassen haben. 
 }
 Ist der Erfolgswert der Probe 16 oder höher, so lässt sich sogar feststellen, dass die beiden beim Verlassen gerannt sind, und zwar vor nicht allzu langer Zeit.
 
@@ -359,19 +355,18 @@ Auf einem Baum in etwa fünf Schritt Höhe können sie \textbf{Janne Pflögler} 
 \probenkasten[
     bild=wahrnehmung,
     gruppenprobe=nein,
+    zusammenarbeit=nein,
     farbe=blau,
     pw=24,
     anzahl=1,
 ]
-{Magieresistenz (I, 24)}{Ähnlich dem Zauber \biglittlecap{Gedankenbilder Elfenruf} können jedoch alle Charaktere versuchen, das Empfangen der Bilder mit einer \textit{Konterprobe} zu verhindern.}
+{Magieresistenz}{Ähnlich dem Zauber \biglittlecap{Gedankenbilder Elfenruf} können jedoch alle Charaktere versuchen, das Empfangen der Bilder mit einer \textit{Konterprobe} zu verhindern.}
+
+Alle Charaktere, denen die \textit{Konterprobe} misslingt, werden  regelrecht überwältigt von Bildern eines grausam verendenden Tieres, dem das Alicorn aus der Stirn geschnitten wurde sowie verzerrten Bildern von Menschen, die das Alicorn zu feinem Staub mahlen. Jeder betroffene Charakter muss eine Probe auf Willenskraft ablegen
 
 
-
-Alle Charaktere, denen die \textit{Konterprobe} mißlingt, werden  regelrecht überwältigt von Bildern eines grausam verendenden Tieres, dem das Alicorn aus der Stirn geschnitten wurde sowie verzerrten Bildern von Menschen, die das Alicorn zu feinem Staub mahlen. Einem jeden der Charaktere muss eine Probe auf 
-
-
-\probe{selbstbeherrschung}{Willenskraft (I, 16)}{
-gelingen, um nicht für einige Momente benommen zu werden. Ein Misslingen der Probe hat keine direkten Auswirkungen auf den Fortgang des Geschehens, sollte den Charakteren aber die arkane Macht des Einhorns vor Augen führen. }
+\mprobe{selbstbeherrschung}{Willenskraft (I, 16)}{Selbstbeherrschung}{
+Ein Misslingen macht einige Momente benommen. Dies hat zwar keine direkten Auswirkungen auf den Fortgang des Geschehens, soll den Charakteren aber die arkane Macht des Einhorns vor Augen führen.}
 
 Sollte den Spielenden noch nicht klar geworden sein, dass ein Angriff auf ein Einhorn, dem heiligen Tier des Halbgottes Nandus, für normale Aventurier einen Frevel darstellt, so wäre jetzt der richtige Moment gekommen, es beiläufig zu erwähnen.
 
